#84 on mobile device correct the asset folder

--- a/src/components/sp-icon/sp-icon.scss
+++ b/src/components/sp-icon/sp-icon.scss
@@ -1,7 +1,7 @@
 .icon-barbc {
     max-width: 50px;
     margin: auto;
-    background-image: url(../../assets/icons/barbc/spritesheet.png);
+    background-image: url(../assets/icons/barbc/spritesheet.png);
     background-repeat: no-repeat;
     display: block;
 }
